test/corpus/dis_marker.txt
================================================================================
Discard Number
================================================================================

#_ 1

--------------------------------------------------------------------------------

(source
  (dis_marker)
  (num_lit))

================================================================================
Discard List
================================================================================

#_ (+ 1 1)

--------------------------------------------------------------------------------

(source
  (dis_marker)
  (list_lit
    (sym_lit
      (sym_name))
    (num_lit)
    (num_lit)))

================================================================================
Discard Map
================================================================================

#_ {:a 1
    :b 2}

--------------------------------------------------------------------------------

(source
  (dis_marker)
  (map_lit
    (kwd_lit
      (kwd_name))
    (num_lit)
    (kwd_lit
      (kwd_name))
    (num_lit)))

================================================================================
Discard Multiple
================================================================================

(let [x 1
      #_ #_ y 2]
  (+ x 2))

--------------------------------------------------------------------------------

(source
  (list_lit
    (sym_lit
      (sym_name))
    (vec_lit
      (sym_lit
        (sym_name))
      (num_lit)
      (dis_marker)
      (dis_marker)
      (sym_lit
        (sym_name))
      (num_lit))
    (list_lit
      (sym_lit
        (sym_name))
      (sym_lit
        (sym_name))
      (num_lit))))
